; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dac_cal_restore_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dac_cal_restore_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtw_dev*, i64, i64)* @rtw8822c_dac_cal_restore_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtw8822c_dac_cal_restore_wait(%struct.rtw_dev* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rtw_dev*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.rtw_dev* %0, %struct.rtw_dev** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  br label %9

9:                                                ; preds = %28, %3
  %10 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @BIT(i32 26)
  %13 = call i32 @BIT(i32 25)
  %14 = or i32 %12, %13
  %15 = call i32 @rtw_write32_mask(%struct.rtw_dev* %10, i64 %11, i32 %14, i32 0)
  %16 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @BIT(i32 26)
  %19 = call i32 @BIT(i32 25)
  %20 = or i32 %18, %19
  %21 = call i32 @rtw_write32_mask(%struct.rtw_dev* %16, i64 %17, i32 %20, i32 2)
  %22 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @rtw_read32_mask(%struct.rtw_dev* %22, i64 %23, i32 15)
  %25 = icmp eq i32 %24, 6
  br i1 %25, label %26, label %27

26:                                               ; preds = %9
  store i32 1, i32* %4, align 4
  br label %33

27:                                               ; preds = %9
  br label %28

28:                                               ; preds = %27
  %29 = load i64, i64* %8, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* %8, align 8
  %31 = icmp slt i64 %29, 100
  br i1 %31, label %9, label %32

32:                                               ; preds = %28
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %32, %26
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @rtw_write32_mask(%struct.rtw_dev*, i64, i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @rtw_read32_mask(%struct.rtw_dev*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
